--- a/warmups/barebone/index.html
+++ b/warmups/barebone/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-    <html lang="en">
-
-    <head>
-        <link rel="stylesheet" type="text/css" href="styles.css">
-        <meta charset="UTF-8">
-        <title>V School warmup excercise</title>
-    </head>
-
-    <body> 
-      <h1>Hello World</h1>
-   
-    </body>
-
-    </html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Document</title>
+</head>
+<body>
+   <h1>Hello World</h1>
+    
+</body>
+</html>
